css/styles.css
/* ... */
.team-content {
    padding: 32px 0;
    text-align: center;
}

.team-subtitle {
    margin-bottom: 8px;
    font-weight: 700;
    font-size: 36px;
    line-height: 1.11;
    letter-spacing: 0.02em;
    color: var(--navy-blue);
}

.team-text {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--slate);
    margin-bottom: 8px;
}

.portfolio-list {
    display: flex;
    flex-direction: column;
    gap: 48px;
}

.portfolio-item {
    width: 100%;
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-item:hover {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
        0px 1px 1px rgba(46, 47, 66, 0.16),
        0px 2px 1px rgba(46, 47, 66, 0.08);
}

.portfolio-content {
    padding: 32px 16px;
    border: 1px solid var(--cornflower);
    border-top: none;
}

.portfolio-box {
    position: relative;
    overflow: hidden;
}

.portfolio-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--iris);
    color: var(--cloud);
    padding: 40px 32px;
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    line-height: 1.5;
    letter-spacing: 0.02em;
}

.portfolio-item:hover .portfolio-overlay {
    transform: translateY(0%);
}

.portfolio-title {
    margin-bottom: 72px;
    font-size: 36px;
    line-height: 1.11;
    text-align: center;
    letter-spacing: 0.02em;
    text-transform: capitalize;
    color: var(--navy-blue);
}

.portfolio-subtitle {
    margin-bottom: 8px;
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: var(--navy-blue);
}

.portfolio-text {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--slate);
}

.footer {
    background-color: var(--navy-blue);
    padding: 100px 0;
}

.footer .logo {
    display: inline-block;
    margin-bottom: 16px;
    text-align: center;
}

.footer-logo-accent {
    color: var(--cloud);
}

.footer-text {
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--cloud);
    max-width: 288px;
    text-align: center;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

.social-list {
    display: flex;
    justify-content: center;
    gap: 24px;
}

.social-item {
    width: 40px;
    height: 40px;
}

.social-link {
    width: 100%;
    height: 100%;
    background-color: var(--iris);
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.social-link:hover,
.social-link:focus {
    background-color: var(--ocean);
}

.social-icon {
    fill: var(--cloud);
}

.footer-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 72px;

}

.footer-logo-container {
    margin-right: 0;
    text-align: center;
}

.footer-social-text {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--white);
    margin-bottom: 16px;
    text-align: center;
}

.footer-social-link {
    width: 100%;
    height: 100%;
    background-color: var(--iris);
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-social-link:hover,
.footer-social-link:focus {
    background-color: var(--green);
}

.footer .social-list {
    gap: 16px;
}

.footer-subscribe {
    margin-left: 0;
    width: 100%;
}

.footer-subscribe-text {
    margin-bottom: 16px;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--white);
    text-align: center;
}

.footer-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
}

.footer-input {
    width: 264px;
    height: 40px;
    border: 1px solid var(--white);
    border-radius: 4px;
    background-color: transparent;
    font-size: 12px;
    line-height: 2;
    letter-spacing: 0.04em;
    padding-left: 16px;
    color: var(--white);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
}

.footer-input::placeholder {
    color: var(--white);
}

.footer-btn {
    min-width: 165px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.04em;
    color: var(--white);
    cursor: pointer;
    background-color: var(--iris);
    border: none;
    border-radius: 4px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-btn:hover,
.footer-btn:focus {
    background-color: var(--ocean);
}

.footer-btn-icon {
    margin-left: 16px;
    fill: var(--cloud);
}

.backdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--navy-blue-modal);
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.backdrop:not(.is-open) {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
}

.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 408px;
    min-height: 584px;
    background-color: var(--dairy);
    border-radius: 4px;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
        0px 1px 3px rgba(0, 0, 0, 0.12),
        0px 2px 1px rgba(0, 0, 0, 0.2);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    padding: 72px 24px 24px 24px;
}
/* ... */

